tests/architecture/fixtures/invalid/seasonalweather/swwp/bad.py
import sqlite3

from seasonalweather.job_store import JobRepository
from tests.support.swwp_simulation import SimulatedPeers

sqlite3.connect("jobs.sqlite3")
JobRepository
SimulatedPeers
